Changed use of alien-users.jar to alien-cs.jar in ce-entrypoint.sh